Implement Phase 1: Foundation & Architecture
- Create hierarchical ConfigManager with env variable support
- Build event-driven Pipeline with sequential/parallel processing
- Set up Commander.js with all 12 planned commands
- Implement custom error classes and logging utilities
- Configure Jest testing framework with coverage thresholds

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,159 @@
-# Gemini API Key for AI features
+# Application
+APP_NAME=CopyTree
+NODE_ENV=development
+APP_DEBUG=false
+
+# CopyTree Configuration
+COPYTREE_CONFIG_PATH=~/.copytree
+COPYTREE_INTERACTIVE=true
+COPYTREE_MAX_CONCURRENCY=5
+COPYTREE_CHUNK_SIZE=1048576
+COPYTREE_PRETTY_PRINT=true
+COPYTREE_EXIT_ON_ERROR=true
+COPYTREE_VERBOSE_ERRORS=false
+
+# File Processing
+COPYTREE_EXCLUDE_MEDIA=true
+COPYTREE_MAX_FILE_SIZE=10485760
+COPYTREE_MAX_TOTAL_SIZE=104857600
+COPYTREE_MAX_FILE_COUNT=10000
+COPYTREE_MAX_OUTPUT_SIZE=52428800
+COPYTREE_MAX_CHARS=2000000
+COPYTREE_FOLLOW_SYMLINKS=false
+COPYTREE_INCLUDE_HIDDEN=false
+COPYTREE_PRESERVE_EMPTY_DIRS=false
+COPYTREE_BINARY_ACTION=placeholder
+COPYTREE_LINE_NUMBERS=false
+
+# AI Configuration
+AI_DEFAULT_PROVIDER=openai
+
+# OpenAI
+OPENAI_API_KEY=
+OPENAI_BASE_URL=https://api.openai.com/v1
+OPENAI_TIMEOUT=60000
+OPENAI_MODEL_SMALL=gpt-3.5-turbo
+OPENAI_MODEL_MEDIUM=gpt-4
+OPENAI_MODEL_LARGE=gpt-4-turbo-preview
+
+# Anthropic
+ANTHROPIC_API_KEY=
+ANTHROPIC_BASE_URL=https://api.anthropic.com/v1
+ANTHROPIC_TIMEOUT=60000
+ANTHROPIC_MODEL_SMALL=claude-3-haiku-20240307
+ANTHROPIC_MODEL_MEDIUM=claude-3-sonnet-20240229
+ANTHROPIC_MODEL_LARGE=claude-3-opus-20240229
+
+# Google Gemini
 GEMINI_API_KEY=
+GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1
+GEMINI_TIMEOUT=60000
+GEMINI_MODEL_SMALL=gemini-1.5-flash
+GEMINI_MODEL_MEDIUM=gemini-1.5-pro
+GEMINI_MODEL_LARGE=gemini-1.5-pro
 
-# Optional: Default output directory
-OUTPUT_DIR=
+# Fireworks
+FIREWORKS_API_KEY=
+FIREWORKS_BASE_URL=https://api.fireworks.ai/inference/v1
+FIREWORKS_TIMEOUT=60000
+FIREWORKS_MODEL_SMALL=accounts/fireworks/models/mixtral-8x7b-instruct
+FIREWORKS_MODEL_MEDIUM=accounts/fireworks/models/mixtral-8x22b-instruct
+FIREWORKS_MODEL_LARGE=accounts/fireworks/models/yi-large
 
-# Optional: Max file size to process (in bytes)
-MAX_FILE_SIZE=10485760
+# AI Default Parameters
+AI_DEFAULT_TEMPERATURE=0.7
+AI_DEFAULT_MAX_TOKENS=2048
+AI_DEFAULT_TOP_P=0.9
+AI_DEFAULT_FREQUENCY_PENALTY=0
+AI_DEFAULT_PRESENCE_PENALTY=0
+AI_DEFAULT_STREAM=false
+AI_DEFAULT_MODEL=
+
+# AI Task-Specific Settings
+AI_SUMMARIZATION_MODEL=small
+AI_SUMMARIZATION_TEMPERATURE=0.3
+AI_SUMMARIZATION_MAX_TOKENS=1024
+
+AI_CLASSIFICATION_MODEL=small
+AI_CLASSIFICATION_TEMPERATURE=0.1
+AI_CLASSIFICATION_MAX_TOKENS=256
+
+AI_FILENAME_MODEL=small
+AI_FILENAME_TEMPERATURE=0.5
+AI_FILENAME_MAX_TOKENS=64
+
+AI_CODE_DESCRIPTION_MODEL=medium
+AI_CODE_DESCRIPTION_TEMPERATURE=0.3
+AI_CODE_DESCRIPTION_MAX_TOKENS=2048
+
+AI_IMAGE_DESCRIPTION_MODEL=medium
+AI_IMAGE_DESCRIPTION_TEMPERATURE=0.5
+AI_IMAGE_DESCRIPTION_MAX_TOKENS=512
+
+AI_ASK_MODEL=large
+AI_ASK_TEMPERATURE=0.7
+AI_ASK_MAX_TOKENS=4096
+AI_ASK_STREAM=true
+
+AI_PROFILE_MODEL=large
+AI_PROFILE_TEMPERATURE=0.5
+AI_PROFILE_MAX_TOKENS=4096
+
+# AI Caching
+AI_CACHE_ENABLED=true
+AI_CACHE_TTL=1440
+AI_CACHE_MAX_SIZE=104857600
+AI_CACHE_PATH=.copytree-cache/ai
+
+# AI Rate Limiting
+AI_RATE_LIMIT_ENABLED=true
+AI_RATE_LIMIT_MAX_REQUESTS=100
+AI_RATE_LIMIT_WINDOW=60000
+
+# AI Retry
+AI_RETRY_MAX_ATTEMPTS=3
+AI_RETRY_INITIAL_DELAY=1000
+AI_RETRY_MAX_DELAY=10000
+AI_RETRY_BACKOFF=2
+
+# AI Token Tracking
+AI_TOKEN_TRACKING_ENABLED=true
+AI_TOKEN_LOG_USAGE=true
+AI_TOKEN_WARN_THRESHOLD=10000
+
+# Cache Configuration
+CACHE_DRIVER=file
+CACHE_ENABLED=true
+CACHE_PREFIX=copytree_
+CACHE_DEFAULT_TTL=3600
+
+# File Cache
+CACHE_FILE_PATH=.copytree-cache
+CACHE_FILE_EXTENSION=.cache
+CACHE_FILE_UMASK=0644
+CACHE_FILE_GC_PROBABILITY=0.01
+
+# Transformation Cache
+CACHE_TRANSFORMATIONS_ENABLED=true
+CACHE_TRANSFORMATIONS_TTL=86400
+CACHE_TRANSFORMATIONS_MAX_SIZE=524288000
+CACHE_PDF_ENABLED=true
+CACHE_PDF_TTL=604800
+CACHE_IMAGE_ENABLED=true
+CACHE_IMAGE_TTL=604800
+CACHE_CODE_ENABLED=true
+CACHE_CODE_TTL=86400
+
+# State Management
+STATE_HISTORY_LIMIT=10
+STATE_SUMMARY_LENGTH=500
+STATE_STORAGE_DRIVER=file
+STATE_STORAGE_PATH=.copytree-state
+STATE_GC_ENABLED=true
+STATE_GC_INTERVAL=86400
+STATE_GC_MAX_AGE=604800
+STATE_SESSION_TIMEOUT=3600
+STATE_SESSION_EXTEND=true
+STATE_FORMAT=json
+STATE_PRETTY=true
+STATE_COMPRESS=false
