Implement Phase 2: File Processing System
- Build FileDiscovery with fast-glob and gitignore support
- Create TransformerRegistry with 4 core transformers
- Implement ProfileLoader with YAML/JSON support
- Add pipeline stages for filtering and transformation
- Enable multiple output destinations (clipboard, file, console)

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
     "braces": "^3.0.3",
-    "chalk": "^5.4.1",
+    "chalk": "^4.1.2",
+    "clipboardy": "^4.0.0",
     "commander": "^14.0.0",
     "dotenv": "^17.2.0",
     "fast-glob": "^3.3.2",
@@ -42,7 +43,8 @@
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "marked": "^16.1.1",
-    "ora": "^8.2.0",
+    "minimatch": "^10.0.3",
+    "ora": "^5.4.1",
     "pdf-parse": "^1.1.1",
     "simple-git": "^3.28.0",
     "tesseract.js": "^6.0.1",
