--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
     "chalk": "^4.1.2",
+    "chokidar": "^4.0.3",
     "clipboardy": "^4.0.0",
     "commander": "^14.0.0",
     "dotenv": "^17.2.0",
