--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "marked": "^16.1.1",
     "minimatch": "^10.0.3",
     "ora": "^5.4.1",
+    "p-limit": "^6.2.0",
     "pdf-parse": "^1.1.1",
     "simple-git": "^3.28.0",
     "tesseract.js": "^6.0.1",
