--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "inquirer": "^12.2.0",
     "joi": "^17.13.3",
     "js-yaml": "^4.1.0",
+    "listr2": "^9.0.1",
     "lodash": "^4.17.21",
     "marked": "^16.1.1",
     "minimatch": "^10.0.3",
