--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration",
+    "test:integration": "jest --config jest.integration.config.js",
     "test:e2e": "jest tests/e2e",
     "benchmark": "node tests/performance/benchmark.js",
     "lint": "eslint src/ bin/ --ext .js",
