--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "inquirer": "^12.2.0",
     "joi": "^17.13.3",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "marked": "^16.1.1",
     "minimatch": "^10.0.3",
     "ora": "^5.4.1",
