refactor: optimize cache system for heavy operations only
- Move cache directory from local .copytree-cache to ~/.copytree/cache
- Restrict caching to only heavy transformers (AI, OCR, PDF, etc)
- Add lazy cache initialization to prevent unnecessary cache creation
- Implement enhanced garbage collection with file age limits (7 days)
- Update environment variables to use home directory cache by default
- Remove test profiles from version control
- Make markdown and CSV transformers opt-in only
- Add support for full paths in --profile option with optional extensions
- Prioritize .copytree folder in working directory for profile lookup
- Fix singleton cache initialization order issues
- Ensure no cache is created for simple file read operations

--- a/profiles/default.yml
+++ b/profiles/default.yml
@@ -90,11 +90,11 @@ transformers:
   file-loader:
     enabled: true
   markdown:
-    enabled: true
+    enabled: false  # Must be explicitly enabled - not applied automatically to .md files
     options:
       mode: strip
   csv:
-    enabled: true
+    enabled: false  # Must be explicitly enabled - only shows first N rows when enabled
     options:
       maxRows: 10
   binary:
