--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,12 @@ COPYTREE_MAX_OUTPUT_SIZE=52428800     # 50MB - Maximum output size
 # AI Cache Configuration
 AI_CACHE_ENABLED=true                 # Enable caching of AI responses
 AI_CACHE_TTL=1440                     # Cache time-to-live in minutes (24 hours)
-AI_CACHE_PATH=.copytree-cache/ai      # Path for AI cache files
+# AI_CACHE_PATH=~/.copytree/cache/ai    # Path for AI cache files (uses default: ~/.copytree/cache)
 
 # Cache Configuration
 CACHE_ENABLED=true                    # Enable general caching
 CACHE_DEFAULT_TTL=3600                # Default cache TTL in seconds (1 hour)
-CACHE_FILE_PATH=.copytree-cache       # Path for cache files
+# CACHE_FILE_PATH=~/.copytree/cache     # Path for cache files (uses default: ~/.copytree/cache)
 
 # Transformation Cache
 CACHE_TRANSFORMATIONS_ENABLED=true    # Cache transformation results
