--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "copytree": "./bin/copytree.js"
   },
   "scripts": {
-    "start": "node bin/copytree.js",
+    "start": "node -r @babel/register bin/copytree.js",
+    "start:dev": "node -r @babel/register bin/copytree.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:unit": "jest tests/unit",
     "test:integration": "jest --config jest.integration.config.js",
     "test:e2e": "jest tests/e2e",
     "benchmark": "node tests/performance/benchmark.js",
-    "lint": "eslint src/ bin/ --ext .js",
-    "lint:fix": "eslint src/ bin/ --ext .js --fix",
-    "format": "prettier --write \"src/**/*.js\" \"bin/**/*.js\" \"tests/**/*.js\"",
-    "format:check": "prettier --check \"src/**/*.js\" \"bin/**/*.js\" \"tests/**/*.js\"",
+    "lint": "eslint src/ bin/ --ext .js,.jsx",
+    "lint:fix": "eslint src/ bin/ --ext .js,.jsx --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
     "prepare": "npm run lint && npm run test",
     "prepublishOnly": "npm run test:coverage && npm run benchmark"
   },
@@ -41,6 +42,8 @@
     "fs-extra": "^11.3.0",
     "glob": "^11.0.3",
     "globby": "^14.1.0",
+    "ink": "^3.2.0",
+    "ink-spinner": "^2.0.0",
     "inquirer": "^12.2.0",
     "joi": "^17.13.3",
     "js-yaml": "^4.1.0",
@@ -50,15 +53,20 @@
     "ora": "^5.4.1",
     "p-limit": "^6.2.0",
     "pdf-parse": "^1.1.1",
+    "react": "^17.0.2",
     "simple-git": "^3.28.0",
     "tesseract.js": "^6.0.1",
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/register": "^7.27.1",
+    "@esbuild-kit/esm-loader": "^2.6.5",
     "@types/node": "^22.12.0",
     "babel-jest": "^30.0.4",
     "eslint": "^9.18.0",
+    "ink-testing-library": "^4.0.0",
     "jest": "^30.0.4",
     "jest-mock-fs": "^1.0.2",
     "prettier": "^3.5.0",
