chore: prepare package for npm publication
- Add author information and contact details
- Include repository, bugs, and homepage URLs in package.json
- Set homepage to https://copytree.dev
- Add Node.js engine requirement (>=14.0.0)
- Update repository URLs in README from placeholders
- Add CHANGELOG.md for version 0.9.0 initial release
- Document Git Flow workflow in CLAUDE.md

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "copytree",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "A Node.js CLI tool that copies directory structures and file contents into structured XML format",
   "bin": {
     "copytree": "./bin/copytree.js"
@@ -28,8 +28,19 @@
     "copy",
     "ai"
   ],
-  "author": "",
+  "author": "Greg Priday <greg@siteorigin.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gregpriday/copytree.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gregpriday/copytree/issues"
+  },
+  "homepage": "https://copytree.dev",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "type": "commonjs",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
