feat: add file reference instructions and @ prefix to XML output
- Add instructions template for consistent file referencing with @ symbol
- Include ct:instructions metadata in XML output with usage guidance
- Prefix all file paths with @ symbol in ct:file tags for clarity
- Update integration tests to expect new @ prefix format
- Organize instructions template in src/templates directory

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
     "prepare": "npm run lint && npm run test",
-    "prepublishOnly": "npm run test:coverage && npm run benchmark"
+    "prepublishOnly": "npm run test:coverage"
   },
   "keywords": [
     "cli",
