--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test:integration": "jest --config jest.integration.config.js",
     "test:e2e": "jest tests/e2e",
     "benchmark": "node tests/performance/benchmark.js",
-    "lint": "eslint src/ bin/ --ext .js,.jsx",
-    "lint:fix": "eslint src/ bin/ --ext .js,.jsx --fix",
+    "lint": "eslint src/ bin/",
+    "lint:fix": "eslint src/ bin/ --fix",
     "format": "prettier --write \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
     "prepublishOnly": "npm run lint && npm run test"
