--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "type": "module",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "axios": "^1.10.0",
     "chalk": "^4.1.2",
     "clipboardy": "^4.0.0",
