feat: set markdown as default output format with comprehensive formatting support
- Change default output format from XML to markdown across CLI and profiles
- Add new MarkdownFormatter class with YAML frontmatter and structured sections
- Add XMLFormatter class to separate XML-specific formatting logic
- Implement comprehensive markdown metadata including file hashes and git status
- Update CLI help text and documentation to reflect markdown-first approach
- Add markdown utilities for fence detection, YAML escaping, and metadata formatting
- Include directory tree visualization in markdown output
- Support all existing features (line numbers, git status, instructions) in markdown format
- Maintain backward compatibility with explicit --format xml option
- Update tests to cover new OutputFormattingStage architecture

--- a/profiles/default.yml
+++ b/profiles/default.yml
@@ -101,7 +101,7 @@ transformers:
     enabled: true
 
 output:
-  format: xml
+  format: markdown
   includeMetadata: true
   addLineNumbers: false
   prettyPrint: true
