test: fix pipeline event contract tests and add validation infrastructure
- Fix pipeline event contract tests to match actual Pipeline implementation
- Add validateDependencies() method to TransformerRegistry with circular dependency detection
- Create pipeline API drift guard tests to prevent future API breaking changes
- Add environment variable isolation helper to prevent cross-test pollution
- Implement real transformer trait validation tests for all registered transformers
- Update MockStage to support configurable error recovery behavior
- Fix event structure expectations to use string stage names instead of objects
- Add stage:recover event collection and testing for error recovery scenarios
- Update memory usage assertions to match actual Pipeline data structure
- Create custom FileEmittingStage for testing file:batch event emission

--- a/profiles/default.yml
+++ b/profiles/default.yml
@@ -101,7 +101,7 @@ transformers:
     enabled: true
 
 output:
-  format: markdown
+  format: xml
   includeMetadata: true
   addLineNumbers: false
   prettyPrint: true
