refactor: remove all AI feature remnants from codebase and docs
- Remove AI transformer detection logic from BaseTransformer.js
- Remove OPENAI_API_KEY and GEMINI_API_KEY checks from TransformerRegistry.js
- Remove image-description from transformer conflicts list
- Remove --ai flag from cache:clear command in CLI
- Remove AI cache directory creation from InstallView component
- Remove AI cache namespaces from ValidationView component
- Remove 'ai' from config sections in ConfigInspectView component
- Remove OPENAI_API_KEY export example from DocsView component
- Replace AI-specific caching recommendations with generic transformation caching in performanceBudgets
- Remove ai-summary and image-description transformer sections from documentation
- Renumber transformers from 15 to 13 in transformer-reference.md
- Replace all AI transformer examples with non-AI alternatives (pdf, first-lines, markdown, image OCR)
- Update transformer count references from "15+" to "13" in README and manifest
- Remove AIProviderError from architecture.md error handling examples
- Remove AIService references from testing-strategy.md
- Remove AI service error exit code from CLI reference
- Remove AI provider credentials setup from installation guide
- Update all profile examples to use available transformers only

--- a/docs/manifest.yaml
+++ b/docs/manifest.yaml
@@ -34,7 +34,7 @@ sections:
   # Transformer documentation
   - id: transformers/reference
     title: "Transformer Reference"
-    summary: "Complete guide to all 15+ transformers and their options"
+    summary: "Complete guide to all 13 transformers and their options"
     files:
       - "profiles/transformer-reference.md"
     tags: [transformers, reference]
