test: add comprehensive E2E golden file tests for CLI output formats
- Create 4 E2E test files with 21 total test cases covering XML, JSON, Markdown, and tree formats
- Add 19 golden files for regression testing of CLI output stability
- Implement CLI runner and normalization utilities in tests/e2e/_utils.js
- Fix fs-extra mocking issue using jest.requireActual for real file I/O in golden file operations
- Add strip-ansi dependency and configure Jest to handle ESM modules
- Implement comprehensive output normalization for paths, timestamps, UUIDs, Git SHAs, and ANSI codes
- Update CI workflow to run E2E tests on Linux, macOS, and Windows with golden file drift detection
- Document E2E testing workflow and golden file usage in tests/README.md

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jest-mock-fs": "^1.0.2",
     "prettier": "^3.5.0",
     "sharp": "^0.34.3",
+    "strip-ansi": "^7.1.0",
     "typescript": "^5.8.3"
   }
 }
