--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,9 +45,28 @@ jobs:
       - name: Run integration tests
         run: npm run test:integration
 
-      - name: Run e2e tests
-        run: npm run test:e2e || echo "No e2e tests found, skipping"
-        continue-on-error: true
+      - name: Run E2E tests
+        run: npm run test:e2e
+        env:
+          FORCE_COLOR: '0'
+          NO_COLOR: '1'
+          TZ: 'UTC'
+          LANG: 'C'
+          LC_ALL: 'C'
+
+      - name: Check for uncommitted golden file changes
+        run: |
+          if git diff --exit-code -- tests/fixtures/goldens; then
+            echo "✅ No uncommitted golden file changes"
+          else
+            echo "❌ ERROR: Uncommitted golden file changes detected!"
+            echo "Golden files were modified but not committed."
+            echo "If these changes are intentional:"
+            echo "  1. Run: UPDATE_GOLDEN=true npm run test:e2e"
+            echo "  2. Review: git diff tests/fixtures/goldens/"
+            echo "  3. Commit the updated golden files with explanation"
+            exit 1
+          fi
 
       - name: Generate coverage report
         run: npm run test:coverage
@@ -61,6 +80,41 @@ jobs:
           fail_ci_if_error: false
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  e2e-cross-platform:
+    name: E2E Tests (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node-version: [20]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v6
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run E2E tests
+        run: npm run test:e2e
+        env:
+          FORCE_COLOR: '0'
+          NO_COLOR: '1'
+          TZ: 'UTC'
+          LANG: 'C'
+          LC_ALL: 'C'
+
+      - name: Check for uncommitted golden file changes
+        run: |
+          git diff --exit-code -- tests/fixtures/goldens || (echo "::error::Uncommitted golden file changes detected! Run UPDATE_GOLDEN=true npm run test:e2e and commit the changes."; exit 1)
 
   lint:
     name: Lint & Format Check
