--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci --legacy-peer-deps --legacy-peer-deps
 
       - name: Run linter
         run: npm run lint
@@ -100,7 +100,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Run E2E tests
         run: npm run test:e2e
@@ -129,7 +129,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci --legacy-peer-deps --legacy-peer-deps
 
       - name: Run ESLint
         run: npm run lint
@@ -151,7 +151,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci --legacy-peer-deps --legacy-peer-deps
 
       - name: Run npm audit
         run: npm audit --audit-level=moderate
