chore(deps): resolve npm deprecation warnings and fix test suite
- Remove unused jest-mock-fs dependency (unused in codebase)
- Update babel-jest to v30.2.0 for Jest 30 compatibility
- Add npm overrides for test-exclude and glob to force modern versions
- Fix jest-diff import in custom golden file matcher
- Update jest.config.js to transform all ESM packages (empty transformIgnorePatterns)
- Set BaseTransformer cache default to false for non-AI transformers
- Update test mocks to reflect new cache defaults
- Regenerate E2E golden files for stable baseline

Resolves all deprecation warnings:
- Eliminated deprecated glob@7.2.3 warnings (3 instances)
- Eliminated deprecated inflight@1.0.6 warning
- Reduced package count from 906 to 750 (156 fewer packages)
- Fixed all failing tests (728 passing, 3 skipped)

--- a/package.json
+++ b/package.json
@@ -70,15 +70,18 @@
     "@babel/preset-react": "^7.27.1",
     "@babel/register": "^7.27.1",
     "@types/node": "^24.9.2",
-    "babel-jest": "^30.0.4",
+    "babel-jest": "^30.2.0",
     "eslint": "^9.18.0",
     "fast-xml-parser": "^5.3.0",
     "ink-testing-library": "^4.0.0",
     "jest": "^30.0.4",
-    "jest-mock-fs": "^1.0.2",
     "prettier": "^3.5.0",
     "sharp": "^0.34.3",
     "strip-ansi": "^7.1.0",
     "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "test-exclude": "^7.0.1",
+    "glob": "^10.4.5"
   }
 }
