--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,15 @@
 {
+  "sourceType": "unambiguous",
   "presets": [
-    ["@babel/preset-env", { "targets": { "node": "18" } }],
+    ["@babel/preset-env", { "targets": { "node": "20" } }],
     ["@babel/preset-react", { "runtime": "automatic" }]
-  ]
+  ],
+  "env": {
+    "test": {
+      "sourceType": "module",
+      "plugins": [
+        ["babel-plugin-transform-import-meta", { "module": "CommonJS" }]
+      ]
+    }
+  }
 }
