feat(api): add programmatic Node.js API for library usage
- Implement scan() async generator for streaming file discovery
- Add format() function supporting XML, JSON, Markdown, NDJSON, SARIF, and tree formats
- Create copy() end-to-end function combining scan and format operations
- Export public API surface via src/index.js with core classes for advanced usage
- Add comprehensive TypeScript definitions with full IntelliSense support
- Include 70 unit and integration tests with 80.76% coverage
- Add JSDoc documentation for all public APIs with usage examples
- Update package.json with main, exports, types, and sideEffects fields
- Fix ProfileLoader mock to properly forward filter overrides in tests

--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "copytree",
   "version": "0.13.1",
-  "description": "A Node.js CLI tool that copies directory structures and file contents into structured XML format",
+  "description": "A Node.js CLI tool and library that copies directory structures and file contents into structured formats",
+  "main": "./src/index.js",
+  "types": "./types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./types/index.d.ts",
+      "import": "./src/index.js"
+    }
+  },
   "bin": {
     "copytree": "./bin/copytree.js"
   },
@@ -25,7 +33,12 @@
     "directory",
     "xml",
     "copy",
-    "ai"
+    "ai",
+    "programmatic",
+    "api",
+    "library",
+    "scan",
+    "format"
   ],
   "author": "Greg Priday <greg@siteorigin.com>",
   "license": "MIT",
@@ -41,6 +54,14 @@
     "node": ">=20.0.0"
   },
   "type": "module",
+  "sideEffects": false,
+  "files": [
+    "src/",
+    "bin/",
+    "types/",
+    "profiles/",
+    "config/"
+  ],
   "dependencies": {
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
