fix(types): correct type definitions based on Codex review
Fixed type accuracy issues identified by Codex code review:

- Fixed error class names: CopytreeError → CopyTreeError
- Removed AIProviderError (not implemented)
- Added missing error classes: InstructionsError, SecretsDetectedError
- Enhanced error class constructors with proper parameters
- Fixed FileResult.content type: now string | Buffer | null
- Updated FileResult.path comment (platform-specific separators)
- Added 'depth' to sort options
- Updated type tests to match new FileResult.content type

All changes ensure type definitions accurately match JavaScript implementations.

Typecheck passes: ✓
Lint passes: ✓

--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "test:unit": "jest tests/unit",
     "test:integration": "jest --config jest.integration.config.js",
     "test:e2e": "jest tests/e2e",
+    "typecheck": "tsc --noEmit -p tests/types/tsconfig.json",
     "benchmark": "node tests/performance/benchmark.js",
     "lint": "eslint src/ bin/",
     "lint:fix": "eslint src/ bin/ --fix",
     "format": "prettier --write \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
-    "prepublishOnly": "npm run lint && npm run test"
+    "prepublishOnly": "npm run lint && npm run test && npm run typecheck"
   },
   "keywords": [
     "cli",
