feat(profiling): add built-in CPU/heap profiling harness (issue #34)
- Add `--profile cpu|heap|all` CLI flag for V8 inspector-based profiling
- Add `--profile-dir <dir>` flag to control output directory (default: .profiles)
- New `src/utils/profiler.js`: Profiler class + writeProfilingReport() function
- Profiler.start() rolls back (disconnects) on partial startup failure
- stop() uses finally{} to null profiler reference and prevent double-stop
- Timestamp captured from profiler.timestamp (not brittle filename parsing)
- writeProfilingReport() writes JSON report with duration, memory, stage timings
- Rename existing `-p,--profile <name>` to `--folder-profile` (keeps -p alias)
- Bypass Ink UI when --profile is active (same as --stream path)
- Add npm scripts: profile, profile:cpu, profile:heap, profile:compare
- New scripts/profile.js: run copytree on fixtures with profiling
- New scripts/profile-compare.js: compare latest report to baseline (with schema validation)
- Add .profiles/ to .gitignore, keep .profiles/baseline/
- Unit tests (21) and E2E tests (9) for profiling harness
- Update folder-profile E2E test to use renamed --folder-profile flag

--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "test:e2e": "jest tests/e2e",
     "test:electron": "cd tests/electron && npm install && npm test",
     "typecheck": "tsc --noEmit -p tests/types/tsconfig.json",
+    "profile": "node scripts/profile.js",
+    "profile:cpu": "node scripts/profile.js --type cpu",
+    "profile:heap": "node scripts/profile.js --type heap",
+    "profile:compare": "node scripts/profile-compare.js",
     "benchmark": "node tests/performance/benchmark.js",
     "lint": "eslint src/ bin/",
     "lint:fix": "eslint src/ bin/ --fix",
