feat(perf): add performance budget enforcement and nightly CI benchmarks
- Create tests/performance/budget.test.js with Jest assertions for small
  (100 files), medium (1k files), and large (10k files) discovery budgets
- Create tests/performance/budgets.json defining maxDurationMs and
  maxMemoryDeltaMb thresholds for each project size tier
- Create jest.performance.config.js: dedicated non-mocked Jest config so
  budget tests run against the real filesystem (fs-extra not mocked)
- Exclude budget.test.js from the main mocked Jest project via negation
  pattern in jest.config.js
- Add test:performance and benchmark:discovery npm scripts
- Create .github/workflows/performance.yml: nightly scheduled benchmark
  with manual workflow_dispatch, artifact upload, and GitHub step summary
- Fix ESM incompatibility in file-discovery.bench.js (require→os import)
- Add fs.ensureDir before writeJson in file-discovery bench saveResults
- Create tests/performance/results/.gitkeep and gitignore result JSONs

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "profile:heap": "node scripts/profile.js --type heap",
     "profile:compare": "node scripts/profile-compare.js",
     "benchmark": "node tests/performance/benchmark.js",
+    "benchmark:discovery": "node tests/performance/file-discovery.bench.js",
+    "test:performance": "jest --config jest.performance.config.js --runInBand",
     "lint": "eslint src/ bin/",
     "lint:fix": "eslint src/ bin/ --fix",
     "format": "prettier --write \"src/**/*.{js,jsx}\" \"bin/**/*.js\" \"tests/**/*.{js,jsx}\"",
