fix(ci): remove dist-tag step from publish workflow
OIDC provenance tokens are single-use so dist-tag add fails after
publish. When publishing a hotfix version lower than latest, emit a
CI warning and require manual dist-tag move instead.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,9 +66,8 @@ jobs:
           VERSION=$(node -p "require('./package.json').version")
           LATEST=$(npm view copytree version 2>/dev/null || echo "0.0.0")
           if [ "$(npx semver "$VERSION" "$LATEST" | tail -1)" != "$VERSION" ]; then
-            echo "Publishing $VERSION with --tag hotfix (latest is $LATEST)"
+            echo "::warning::Publishing $VERSION with --tag hotfix (latest is $LATEST). Run 'npm dist-tag add copytree@$VERSION latest' manually after publish."
             npm publish --access public --tag hotfix
-            npm dist-tag add "copytree@$VERSION" latest
           else
             npm publish --access public
           fi
